Made site responsive
Responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -324,9 +324,7 @@ a:link, a:visited {
 
 .content-grid {
   display: grid;
-  grid-template-columns: 10px auto 10px;
-  grid-template-areas: ". content .";
-  padding: 60px 0; }
+  grid-template-areas: ". content ."; }
   .content-grid > div {
     grid-area: content; }
 
@@ -400,11 +398,13 @@ header {
   grid-template-columns: 20% auto;
   padding: 10px;
   background-color: #FEF7E8;
-  padding: 32px 16px 16px 16px; }
+  padding: 24px 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
   header nav i {
     font-size: 1.875rem;
-    color: #1D1F20;
-    top: -24px; }
+    color: #1D1F20; }
   header aside {
     text-align: right; }
     header aside a:active,
@@ -436,25 +436,78 @@ footer {
         color: #F0EE64; }
 
 /* =============
+    Callouts
+============= */
+#callouts ul {
+  display: grid;
+  justify-content: center;
+  grid-template-areas: "ben" "jamie" "allison" "ciarlo";
+  grid-template-rows: repeat(4, 280px); }
+  @media (min-width: 498px) {
+    #callouts ul {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-areas: "ben jamie" "allison ciarlo";
+      grid-template-rows: repeat(2, 350px); } }
+  @media (min-width: 1210px) {
+    #callouts ul {
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-areas: "ben jamie allison ciarlo";
+      grid-template-rows: repeat(1, 280px); } }
+  #callouts ul li {
+    font-family: 'Space Mono';
+    font-weight: 400;
+    font-size: 1.5rem;
+    line-height: 1.75rem;
+    padding: 48px; }
+  #callouts ul li:nth-child(1) {
+    grid-area: ben;
+    color: #FEF7E8;
+    background-color: #387DCB; }
+  #callouts ul li:nth-child(2) {
+    grid-area: jamie;
+    color: #1D1F20;
+    background-color: #9EDAE3; }
+  #callouts ul li:nth-child(3) {
+    grid-area: allison;
+    color: #FEF7E8;
+    background-color: #7893D7; }
+  #callouts ul li:nth-child(4) {
+    grid-area: ciarlo;
+    color: #1D1F20;
+    background-color: #A5DCC4; }
+
+/* =============
     Contact
 ============= */
 #contact {
   background-color: #FEF7E8;
-  padding-bottom: 80px; }
-  #contact div p {
-    border: 1px solid #1D1F20;
-    border-radius: 3px;
-    padding: 8px 16px;
-    margin: 0px 24px 24px 24px; }
-  #contact div div {
-    border: 1px solid #1D1F20;
-    border-radius: 3px;
-    padding: 8px 16px;
-    margin: 24px 24px 40px 24px;
-    height: 80px; }
-  #contact div .button {
-    background-color: #9EDAE3;
-    margin: 120px 24px; }
+  padding-bottom: 80px;
+  display: block; }
+  #contact > div {
+    margin: 0px auto; }
+    @media (min-width: 789px) {
+      #contact > div {
+        width: 75%; } }
+    @media (min-width: 968px) {
+      #contact > div {
+        width: 50%; } }
+    @media (min-width: 1210px) {
+      #contact > div {
+        width: 30%; } }
+    #contact > div div p {
+      border: 1px solid #1D1F20;
+      border-radius: 3px;
+      padding: 8px 16px;
+      margin: 0px 24px 24px 24px; }
+    #contact > div div div {
+      border: 1px solid #1D1F20;
+      border-radius: 3px;
+      padding: 8px 16px;
+      margin: 24px 24px 40px 24px;
+      height: 80px; }
+    #contact > div div .button {
+      background-color: #9EDAE3;
+      margin: 120px 24px; }
 
 /* =============
     Events
@@ -463,43 +516,88 @@ footer {
   color: #1D1F20;
   margin-bottom: -24px; }
 
-#events ul li {
-  padding: 48px 0px; }
-  #events ul li p {
-    font-family: 'Lora';
-    font-weight: 400;
-    color: #1D1F20;
-    font-size: 1.5rem;
-    line-height: 2rem;
-    padding: 0px 32px 32px 32px; }
-  #events ul li .button {
-    margin: 24px; }
-
-#events ul li:nth-child(3) {
-  background-color: #9EDAE3;
-  padding: 24px 0px 40px 0px;
-  margin: 24px 20% 80px 0px; }
+#events ul {
+  display: grid;
+  grid-template-areas: "event1" "event2" "event3";
+  grid-template-rows: repeat(3, 280px); }
+  @media (min-width: 789px) {
+    #events ul {
+      grid-template-columns: repeat(2, 40%);
+      grid-template-areas: "event1 event2" "event3 event3";
+      grid-template-rows: repeat(2, 350px);
+      align-items: center; } }
+  @media (min-width: 968px) {
+    #events ul {
+      grid-template-columns: repeat(3, 30%);
+      grid-template-areas: "event1 event2 event3";
+      grid-template-rows: repeat(1, 350px);
+      align-items: center; } }
+  #events ul li {
+    padding: 48px 0px; }
+    #events ul li p {
+      font-family: 'Lora';
+      font-weight: 400;
+      color: #1D1F20;
+      font-size: 1.5rem;
+      line-height: 2rem;
+      padding: 0px 32px 32px 32px; }
+    #events ul li .button {
+      margin: 24px; }
+  #events ul li:nth-child(1) {
+    grid-area: event1; }
+  #events ul li:nth-child(2) {
+    grid-area: event2; }
+  #events ul li:nth-child(3) {
+    grid-area: event3;
+    background-color: #9EDAE3; }
 
 /* =============
     Gallery
 ============= */
+#gallery div {
+  background-color: black; }
+
 #gallery ul {
   display: grid;
-  grid-gap: 24px;
-  justify-content: center;
-  grid-template-areas: "mission" "kid1" "kid2" "kid3";
-  grid-template-rows: repeat(4, 272px); }
+  grid-template-areas: "mission" "kid1" "kid2" "kid3" "banner";
+  grid-template-rows: repeat(5, 272px); }
+  @media (min-width: 498px) {
+    #gallery ul {
+      grid-template-columns: repeat(1, 80%);
+      grid-template-areas: "mission" "kid1" "kid2" "kid3";
+      grid-template-rows: repeat(4, 350px);
+      padding: 24px;
+      grid-gap: 12px; } }
+  @media (min-width: 789px) {
+    #gallery ul {
+      grid-template-columns: repeat(2, 50%);
+      grid-template-areas: "mission kid1" "kid2 kid3" "banner banner";
+      grid-template-rows: repeat(3, 350px);
+      padding: 80px;
+      grid-gap: 40px; } }
+  @media (min-width: 968px) {
+    #gallery ul {
+      grid-template-columns: repeat(3, 30%);
+      grid-template-areas: "mission kid3 kid3" "kid2 kid3 kid3" "kid1 banner banner";
+      grid-template-rows: repeat(3, 350px); } }
   #gallery ul li {
     background-size: cover;
     height: 100%; }
   #gallery ul li:nth-child(1) {
+    background-image: url("../img/gallery/mission.jpg");
     grid-area: mission; }
   #gallery ul li:nth-child(2) {
+    background-image: url("../img/gallery/kid1.jpg");
     grid-area: kid1; }
   #gallery ul li:nth-child(3) {
+    background-image: url("../img/gallery/kid2.jpg");
     grid-area: kid2; }
   #gallery ul li:nth-child(4) {
+    background-image: url("../img/gallery/kid3.jpg");
     grid-area: kid3; }
+  #gallery ul li:nth-child(5) {
+    background-image: url("../img/gallery/banner.jpg");
+    grid-area: banner; }
 
 /* =============
     Heroes
@@ -509,12 +607,61 @@ footer {
   background-image: url("../img/hero/hero.jpg");
   background-size: cover;
   width: 100%;
-  background-position: -16px;
   background-repeat: no-repeat;
   display: flex; }
   #hero div {
+    padding: 16px;
     display: inline-block;
     align-self: flex-end; }
+    @media (min-width: 789px) {
+      #hero div {
+        margin: 0 auto 0 50%;
+        width: 50%; } }
+    @media (min-width: 968px) {
+      #hero div {
+        margin: 0 auto 0 63%;
+        width: 37%; } }
+    @media (min-width: 789px) {
+      #hero div p {
+        font-size: 1.5rem;
+        line-height: 2rem; } }
+
+#hero2 {
+  height: 378px;
+  background-image: url("../img/hero/hero2.jpg");
+  background-size: cover;
+  width: 100%;
+  background-repeat: no-repeat;
+  display: flex; }
+  @media (min-width: 498px) {
+    #hero2 {
+      display: none; } }
+  @media (min-width: 968px) {
+    #hero2 {
+      display: inline-block; } }
+  #hero2 div {
+    display: inline-block;
+    align-self: flex-end; }
+    #hero2 div h1 {
+      color: #1D1F20;
+      font-family: 'Space Mono';
+      padding: 48px; }
+      @media (min-width: 789px) {
+        #hero2 div h1 {
+          font-size: 2.5rem;
+          line-height: 2.5rem; } }
+      @media (min-width: 968px) {
+        #hero2 div h1 {
+          font-size: 5rem;
+          line-height: 5rem; } }
+
+#hero3 {
+  height: 378px;
+  background-image: url("../img/hero/hero3.jpg");
+  background-size: cover;
+  width: 100%;
+  background-repeat: no-repeat;
+  display: flex; }
 
 /* =============
     Identity
@@ -532,72 +679,129 @@ footer {
   letter-spacing: 0.0125rem;
   padding: 0px 48px 80px; }
 
-#identity ul li:nth-child(1) {
-  background-color: #F77C68; }
-
-#identity ul li:nth-child(2) {
-  background-color: #F3AE8C; }
-
-#identity ul li:nth-child(3) {
-  background-color: #F3E6CB; }
-
-#identity ul li:nth-child(4) {
-  background-color: #F0EE64; }
+#identity ul {
+  display: grid;
+  grid-template-areas: "dancer" "donor" "healer" "fighter";
+  grid-template-rows: repeat(4, 280px);
+  grid-template-columns: repeat(2, 100%); }
+  @media (min-width: 789px) {
+    #identity ul {
+      grid-template-columns: repeat(2, 50%);
+      grid-template-areas: "dancer donor" "healer fighter";
+      grid-template-rows: repeat(2, 240px); } }
+  @media (min-width: 968px) {
+    #identity ul {
+      grid-template-columns: repeat(4, 25%);
+      grid-template-areas: "dancer donor healer fighter";
+      grid-template-rows: repeat(1, 240px); } }
+  #identity ul li:nth-child(1) {
+    background-color: #F77C68;
+    grid-area: dancer; }
+  #identity ul li:nth-child(2) {
+    background-color: #F3AE8C;
+    grid-area: donor; }
+  #identity ul li:nth-child(3) {
+    background-color: #F3E6CB;
+    grid-area: healer; }
+  #identity ul li:nth-child(4) {
+    background-color: #F0EE64;
+    grid-area: fighter; }
 
 /* =============
     Together
 ============= */
 #together {
   background-color: #1D1F20;
-  padding-bottom: 80px; }
+  padding-bottom: 80px;
+  display: grid;
+  grid-template-areas: "children" "cmn";
+  grid-template-rows: repeat(2, 560px); }
+  @media (min-width: 498px) {
+    #together {
+      grid-template-columns: repeat(1, 90%);
+      grid-template-areas: "children" "cmn";
+      grid-template-rows: repeat(2, 360px); } }
+  @media (min-width: 789px) {
+    #together {
+      grid-template-columns: repeat(1, 50%);
+      grid-template-areas: "children" "cmn";
+      grid-template-rows: repeat(2, 360px); } }
+  @media (min-width: 968px) {
+    #together {
+      grid-template-columns: repeat(2, 50%);
+      grid-template-areas: "children cmn" "children cmn";
+      grid-template-rows: repeat(2, 240px); } }
+  @media (min-width: 1210px) {
+    #together {
+      justify-content: center;
+      grid-template-columns: repeat(2, 30%);
+      grid-template-areas: "children cmn" "children cmn";
+      grid-template-rows: repeat(2, 240px); } }
   #together article h1 {
-    color: #9EDAE3;
+    color: #FEF7E8;
     font-weight: 600;
     font-size: 3rem;
     line-height: 3rem;
     letter-spacing: 0.046875rem; }
   #together article img {
     padding: 24px;
-    max-width: 80%;
-    align-items: center; }
-  #together aside h2 {
-    font-family: 'Space Mono', monospace;
-    font-size: 64px;
-    color: #9EDAE3;
-    font-size: 4rem;
-    letter-spacing: 0.046875rem;
-    padding-left: 24px; }
-  #together aside p {
-    color: #FEF7E8; }
-  #together aside a {
-    color: #F0EE64;
-    margin: 32px; }
+    width: 80%;
+    align-items: center;
+    display: inline-block;
+    align-self: flex-end; }
+  #together aside {
+    grid-area: cmn;
+    display: inline-block;
+    align-self: flex-end; }
+    #together aside h2 {
+      font-family: 'Space Mono', monospace;
+      font-size: 64px;
+      color: #9EDAE3;
+      font-size: 4rem;
+      letter-spacing: 0.046875rem;
+      padding-left: 24px; }
+    #together aside div p {
+      color: #FEF7E8; }
+    #together aside div a {
+      color: #F0EE64;
+      margin: 32px; }
 
 /* =============
     Totals
 ============= */
 #totals {
-  padding-bottom: 80px; }
-  #totals h1 {
+  padding: 80px 40px;
+  background-color: #FEF7E8; }
+  @media (min-width: 789px) {
+    #totals > div {
+      width: 60%;
+      margin: 0 auto; } }
+  @media (min-width: 968px) {
+    #totals > div {
+      width: 40%;
+      margin: 0 auto; } }
+  #totals > div h1 {
     color: #7893D7; }
-  #totals h6 {
+  #totals > div h6 {
     font-family: 'Space Mono', monospace;
-    font-weight: 400;
     color: #9EDAE3;
-    font-size: 1.25rem;
+    font-family: 'Space Mono';
+    font-weight: 400;
+    font-size: 1.5rem;
+    line-height: 1.75rem;
     color: #1D1F20;
     padding: 0px 24px; }
-  #totals aside {
-    padding: 40px 0px; }
-    #totals aside .link {
+  #totals > div aside {
+    padding: 24px 0px; }
+    #totals > div aside .link {
       color: #7893D7;
       margin: 0px 24px; }
-
-#tan-bg {
-  background-color: #F3E6CB;
-  height: 24px;
-  border-radius: 20px;
-  margin: 0px 24px; }
-  #tan-bg #bg-fill {
-    grid-template-columns: 62% auto;
-    color: #7893D7; }
+  #totals > div .tan-bg {
+    background-color: #F3E6CB;
+    height: 24px;
+    border-radius: 20px;
+    margin: 0px 24px; }
+    #totals > div .tan-bg div {
+      color: #7893D7;
+      height: 24px;
+      width: 30%; }
