--- a/scss/sections/_events.scss
+++ b/scss/sections/_events.scss
@@ -8,6 +8,31 @@
         margin-bottom: -24px;
     }
     ul{
+        display: grid;
+        grid-template-areas:
+        "event1"
+        "event2"
+        "event3";
+        grid-template-rows: repeat(3, 280px);
+
+
+        @include md{
+            grid-template-columns: repeat(2, 40%);
+            grid-template-areas:
+            "event1 event2"
+            "event3 event3";
+            grid-template-rows: repeat(2, 350px);
+            align-items: center;
+        }
+
+        @include lg{
+            grid-template-columns: repeat(3, 30%);
+            grid-template-areas:
+            "event1 event2 event3";
+            grid-template-rows: repeat(1, 350px);
+            align-items: center;
+        }
+
         li{
             padding: 48px 0px;
             p{
@@ -22,10 +47,15 @@
                 margin: 24px;
             }
         }
+        li:nth-child(1) {
+            grid-area: event1;
+        }
+        li:nth-child(2) {
+            grid-area: event2;
+        }
         li:nth-child(3) {
+            grid-area: event3;
             background-color: $sea;
-            padding: 24px 0px 40px 0px;
-            margin: 24px 20% 80px 0px;
         }
     }
 }
