--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -19,6 +19,7 @@
 @import "layout/_footer";
 
 // Sections Styles
+@import "sections/_callouts";
 @import "sections/_contact";
 @import "sections/_events";
 @import "sections/_gallery";
