--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -4,21 +4,24 @@
 
 // Define the breakpoints
 // Small tablets and large smartphones (landscape view)
-$screen-sm-min: 576px;
+
+$screen-sm-min: 498px;
 
 // Small tablets (portrait view)
-$screen-md-min: 768px;
+$screen-md-min: 789px;
 
 // Tablets and small desktops
-$screen-lg-min: 992px;
+$screen-lg-min: 968px;
 
 // Large tablets and desktops
-$screen-xl-min: 1200px;
+$screen-xl-min: 1210px;
 
 // Colors
 $confetti: #F0EE64;
 $mystic: #7893D7;
+$blueberry: #387DCB;
 $sea: #9EDAE3;
+$mint: #A5DCC4;
 $light: #FEF7E8;
 $dark: #1D1F20;
 
