--- a/scss/sections/_identity.scss
+++ b/scss/sections/_identity.scss
@@ -17,17 +17,44 @@
         padding: 0px 48px 80px;
     }
     ul{
+        display: grid;
+        grid-template-areas:
+        "dancer"
+        "donor"
+        "healer"
+        "fighter";
+        grid-template-rows: repeat(4, 280px);
+        grid-template-columns: repeat(2, 100%);
+
+        @include md{
+            grid-template-columns: repeat(2, 50%);
+            grid-template-areas:
+            "dancer donor"
+            "healer fighter";
+            grid-template-rows: repeat(2, 240px);
+        }
+        @include lg{
+            grid-template-columns: repeat(4, 25%);
+            grid-template-areas:
+            "dancer donor healer fighter";
+            grid-template-rows: repeat(1, 240px);
+        }
+
         li:nth-child(1) {
             background-color: $watermelon;
+            grid-area: dancer;
         }
         li:nth-child(2) {
             background-color: $peach;
+            grid-area: donor;
         }
         li:nth-child(3) {
             background-color: $tan;
+            grid-area: healer;
         }
         li:nth-child(4) {
             background-color: $confetti;
+            grid-area: fighter;
         }
     }
 }
