--- a/scss/sections/_together.scss
+++ b/scss/sections/_together.scss
@@ -5,9 +5,43 @@
 #together{
     background-color: $dark;
     padding-bottom: 80px;
+    display: grid;
+    grid-template-areas:
+    "children"
+    "cmn";
+    grid-template-rows: repeat(2, 560px);
+    @include sm{
+        grid-template-columns: repeat(1, 90%);
+        grid-template-areas:
+        "children"
+        "cmn";
+        grid-template-rows: repeat(2, 360px);
+    }
+    @include md{
+        grid-template-columns: repeat(1, 50%);
+        grid-template-areas:
+        "children"
+        "cmn";
+        grid-template-rows: repeat(2, 360px);
+    }
+    @include lg{
+        grid-template-columns: repeat(2, 50%);
+        grid-template-areas:
+        "children cmn"
+        "children cmn";
+        grid-template-rows: repeat(2, 240px);
+    }
+    @include xl{
+        justify-content: center;
+        grid-template-columns: repeat(2, 30%);
+        grid-template-areas:
+        "children cmn"
+        "children cmn";
+        grid-template-rows: repeat(2, 240px);
+    }
     article{
         h1{
-            color: $sea;
+            color: $light;
             font-weight: 600;
             font-size: rem-calc(48);
             line-height: rem-calc(48);
@@ -15,12 +49,17 @@
         }
         img{
             padding: 24px;
-            max-width: 80%;
+            width: 80%;
             align-items: center;
+            display: inline-block;
+            align-self: flex-end;
         }
 
     }
     aside{
+        grid-area: cmn;
+        display: inline-block;
+        align-self: flex-end;
         h2{
             font-family: 'Space Mono', monospace;
             font-size: 64px;
@@ -29,12 +68,14 @@
             letter-spacing: rem-calc(0.75);
             padding-left: 24px;
         }
-        p{
-            color: $light;
-        }
-        a{
-            color: $confetti;
-            margin: 32px;
+        div{
+            p{
+                color: $light;
+            }
+            a{
+                color: $confetti;
+                margin: 32px;
+            }
         }
     }
 }
