--- a/scss/sections/_callouts.scss
+++ b/scss/sections/_callouts.scss
@@ -21,12 +21,16 @@
             grid-template-rows: repeat(2, 350px);
         }
 
+        @include sm{
+            grid-template-rows: repeat(2, 280px);
+        }
+
 
         @include xl{
             grid-template-columns: repeat(4, 1fr);
             grid-template-areas:
             "ben jamie allison ciarlo";
-            grid-template-rows: repeat(1, 280px);
+            grid-template-rows: repeat(1, 240px);
         }
 
         li {
@@ -35,6 +39,9 @@
             font-size: rem-calc(24);
             line-height: rem-calc(28);
             padding: 48px;
+            @include md{
+                padding: 56px;
+            }
         }
         li:nth-child(1) {
             grid-area: ben;
