--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -3,19 +3,16 @@
 ============= */
 
 #contact{
-    background-color: $light;
+    background-color: $tan;
     padding-bottom: 80px;
     display: block;
     >div{
         margin: 0px auto;
+        max-width: 789px;
+        margin: 0 auto;
         @include md{
-            width: 75%;
-        }
-        @include lg{
-            width: 50%;
-        }
-        @include xl{
-            width: 30%;
+            width: 80%;
+            padding: 80px 0px;
         }
         div{
             p{
