--- a/scss/sections/_events.scss
+++ b/scss/sections/_events.scss
@@ -3,11 +3,21 @@
 ============= */
 
 #events{
+    div{
+        background-color: $light;
+        @include md{
+            padding: 80px;
+        }
+    }
+
     h1{
         color: $dark;
         margin-bottom: -24px;
+        text-align: center;
     }
     ul{
+        max-width: 968px;
+        margin: 0 auto;
         display: grid;
         grid-template-areas:
         "event1"
@@ -17,7 +27,7 @@
 
 
         @include md{
-            grid-template-columns: repeat(2, 40%);
+            grid-template-columns: repeat(2, 1fr);
             grid-template-areas:
             "event1 event2"
             "event3 event3";
@@ -26,7 +36,15 @@
         }
 
         @include lg{
-            grid-template-columns: repeat(3, 30%);
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-areas:
+            "event1 event2 event3";
+            grid-template-rows: repeat(1, 350px);
+            align-items: center;
+        }
+
+        @include xl{
+            grid-template-columns: repeat(3, 1fr);
             grid-template-areas:
             "event1 event2 event3";
             grid-template-rows: repeat(1, 350px);
@@ -39,9 +57,12 @@
                 font-family: 'Lora';
                 font-weight: 400;
                 color: $dark;
-                font-size: rem-calc(24);
+                font-size: rem-calc(22);
                 line-height: rem-calc(32);
                 padding: 0px 32px 32px 32px;
+            }
+            span{
+                font-size: rem-calc(30);
             }
             .button{
                 margin: 24px;
