--- a/scss/sections/_heroes.scss
+++ b/scss/sections/_heroes.scss
@@ -9,6 +9,14 @@
     width: 100%;
     background-repeat: no-repeat;
     display: flex;
+    @include lg{
+        background-position: 0 -100px;;
+        height: 540px;
+    }
+    @include xl{
+        background-position: 0 -220px;;
+        height: 680px;
+    }
     div{
         padding: 16px;
         display: inline-block;
@@ -25,6 +33,10 @@
             @include md{
                 font-size: rem-calc(24);
                 line-height: rem-calc(32);
+                background-color: $light;
+                margin: 40px;
+                padding: 40px;
+                border-radius: 16px;
             }
         }
 
@@ -45,20 +57,19 @@
         display: inline-block;
     }
     div{
-        display: inline-block;
-        align-self: flex-end;
         h1{
             color: $dark;
             font-family: 'Space Mono';
-
             padding: 48px;
             @include md{
                 font-size: rem-calc(40);
                 line-height: rem-calc(40);
+                text-align: center;
             }
             @include lg{
                 font-size: rem-calc(80);
                 line-height: rem-calc(80);
+                text-align: center;
             }
         }
     }
@@ -71,4 +82,7 @@
     width: 100%;
     background-repeat: no-repeat;
     display: flex;
+    @include xl{
+        height: 500px;
+    }
 }
