--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,33 +1,56 @@
 /* =============
     Header
 ============= */
-header {
-    display: grid;
-    grid-template-columns: 20% auto;
-    padding: 10px;
-    background-color: $light;
-    padding: 24px 16px;
-    display: flex;
-    align-items:center;
-    justify-content: space-between;
 
-    nav {
-        i {
-            font-size: rem-calc(30);
-            color: $dark;
-        }
+header {
+    background-color: $light;
+    display: grid;
+    grid-template-areas:
+        "logo burger"
+        "nav nav";
+    grid-template-columns: 70% auto;
+    @include lg {
+        grid-template-areas: "logo nav";
+        grid-template-columns: 30% auto;
     }
 
-    aside {
-        text-align: right;
-        a:link,
-        a:visited {
+    // logo container
+    section:nth-child(1) {
+        grid-area: logo;
+        padding: 16px;
+    }
+
+    // burger container
+    section:nth-child(2) {
+        align-items: center;
+        display: flex;
+        grid-area: burger;
+        justify-content: flex-end;
+        padding: 16px;
+        @include lg {
+            display: none;
         }
 
-        a:active,
-        a:hover {
-            color: $confetti;
-            background-color: $dark;
+        button {
+            border: none;
+            background-color: $light;
+            color: $dark;
+            font-size: rem-calc(30);
+            outline: none;
+            a:active, a:hover {
+                color: $mystic;
+            }
+        }
+
+    }
+
+
+    // nav container
+    nav {
+        display: none;
+        grid-area: nav;
+        @include lg {
+            display: block !important;
         }
     }
 }
